frontend/src/App.css
/* ... */
.avatar {
  min-width: 70px;
  min-height: 70px;
  border-radius: 50%;
  border: 3px solid black;
  background-color: white;
  /* background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2492254803012160630/33FDDE88D49A58AF9C263ED4354B43193F50903A/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"); */
  background-size: cover;
  background-repeat: no-repeat;
  cursor: pointer;
}

.form input {
  height: 30px;
  width: 300px;
}

.whiteborder {
  border-color: white;
}

.login {
  width: 100vw;
  height: 100vh;
  font-size: 20px;
  gap: 10px;
  background-color: white;
  color: black;
}

.login h1 {
  z-index: 2;
  text-align: center;
}

.form,
.login {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 10px;
  gap: 5px;
}

.bigavatar {
  width: 150px;
  height: 150px;
}

.chatavatar {
  /* position: absolute;
  top: 5%;
  left: 5%; */
  grid-area: 1 / 2 / 1 / 3;
}

.bottomsection {
  width: 100%;
  height: 7%;
  border: 1px solid black;
  display: flex;
  align-items: center;
  justify-content: center;
}

.favicon {
  /* position: absolute;
  left: 95%;
  top: 40%; */
  grid-area: 1 / 5 / 1 / 6;
}

.date {
}

.ngright {
  display: none;
  /* position: absolute;
  left: 16vw;
  top: 2vh; */
}

@media only screen and (max-width: 2100px) {
  .mid .avatar {
    min-width: 60px;
    min-height: 60px;
  }
  .bigavatar.avatar {
    width: 100px;
    height: 100px;
  }
}

@media only screen and (max-width: 1000px) {
  .whiteborder.avatar {
    min-width: 40px;
    min-height: 40px;
  }
  .cat {
    width: 300px;
    height: 300px;
  }
  .xmargin {
    max-height: 50vh;
  }
  .xmargin p {
    height: 30vh;
    width: 80%;
  }
  .bigavatar.avatar {
    width: 75px;
    height: 75px;
  }
  .profilebackground {
    min-height: 40vh;
  }
  .chatdeletediv,
  .messagedeletediv {
    position: absolute;
    left: 10%;
    top: 40%;
    padding: 30px;
    border: 3px solid gold;
    z-index: 2;
    height: 20vh;
    width: 80%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    background-color: black;
    color: white;
  }
  .messagedeletediv {
    gap: 30px;
  }
  .chatdeletediv {
    gap: 20px;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .yes {
    background-color: green;
    color: white;
    font-weight: bold;
  }
  .no {
    background-color: red;
    color: white;
    font-weight: bold;
  }
  .mobile {
    display: block !important;
  }
  .nonmobile {
    display: none;
  }
  /* .biobutton {
    width: 70px;
    height: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
  } */
  h2 {
    font-size: 20px;
  }
  .smallgap {
    gap: 10px;
    margin: 0 10px;
  }
  .avatar {
    min-width: 50px;
    min-height: 50px;
  }
  .imgcontainer img {
    max-width: 300px;
    max-height: 300px;
  }
  .profbuttons {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }
  .grouped {
    gap: 20px;
  }

  .biobutton,
  .changepass {
    margin: 0;
  }

  .topbuttons {
    flex-direction: column;
    gap: 10px;
  }
  .topbuttons button {
    width: 45px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 15px;
  }
}

@media only screen and (max-width: 702px) {
  .left {
    width: 100vw;
    height: 5vh;
    grid-area: 2 / 1 / 3 / 2;
    flex-direction: row;
  }
  .mid {
    height: 95vh;
    grid-area: 1 / 1 / 2 / 2;
    min-width: 100vw;
  }
  .messagebox,
  .newgroup {
    height: 95vh;
    width: 100vw;
    grid-area: 1 / 1 / 2 / 2;
    color: black;
    background-color: white;
  }

  .imgcontainer {
    display: none;
  }
  .profile {
    height: 95vh;
    width: 100vw;
  }
  .groupinfo {
    font-size: 15px;
  }
  .messagebox .groupinfo {
    margin-left: -30px;
  }
  .cat {
    width: 200px;
    height: 200px;
  }
  h1 {
    font-size: 60%;
  }
  .form h2 {
    font-size: 60%;
  }
  .profcollright,
  .collleft,
  .collright,
  .ngright {
    display: block !important;
  }
  .body {
    display: grid;
    grid-template-columns: 100vw;
    grid-template-rows: 95vh 5vh;
  }
  .collapse {
    display: none !important;
  }
  .newgroup input {
    max-width: 200px;
  }

  .topbuttons {
    gap: 10px;
    flex-direction: column;
  }
  .topbuttons button {
    width: 30px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 10px;
  }
  .chatinfotop .avatar {
    max-width: 50px;
    max-height: 50px;
  }

  /* .groupedtogether {
    align-items: center;
    justify-content: center;
  } */

  .profilebackground {
    min-height: 30vh;
  }
  .closeprof {
    width: 48px;
    height: 48px;
    right: 0px;
    top: 0px;
  }
  .profcollright {
    width: 36px;
    height: 36px;
    right: 0px;
    top: 0px;
  }
  .row {
    padding-right: 50px;
    gap: 20px;
  }
  .profile textarea {
    max-width: 50vw;
  }

  .biodiv p,
  .xmargin p {
    width: 80%;
    height: 20vh;
    word-wrap: break-word;
    overflow-y: auto;
  }
  .xmargin {
    max-height: 60vh;
  }

  .biodiv textarea {
    min-width: 250px;
    min-height: 10vh;
  }
  .chatdeletediv button {
    height: 50px;
    width: 70px;
    font-weight: bold;
    font-size: 15px;
  }
  .login {
    font-size: 15px;
  }
  .grouped {
    gap: 50px;
  }
}

